# stm32_cnc_controller

./: .gitignore  README.md  analyze_step_responses.py  bus.py  cnc_spi_client.py  encoder_csv_agent.py  filter_swv_export.py  fopdt_simulator.py  generate_dda_graph.py  generate_firmware_dda.py  generate_flowchart.py  generate_pi_simulation_graph.py  generate_ramp_graph.py  generate_step_comparison.py  generate_timing_diagram.py  interactive_old_sim.py  interactive_sim.py  plot_filtered_swv.py  plot_swv_csv.py  pyproject.toml  temp_begin.txt  tmc.py  tmc2130.py  tmc5160.py  tmp_head.txt  tmp_head120.txt  tmp_tmc5160_copy.txt  tuning_profiles.py
CNC_Controller/: CNC_Controller Debug SWV.launch  CNC_Controller Debug.launch  CNC_Controller.ioc  STM32L475VGTX_FLASH.ld  STM32L475VGTX_RAM.ld
CNC_Controller/App/: README.md
CNC_Controller/App/Tests/: CMakeLists.txt  test_protocol.c
Docs/: LOGGING.md  encoder_pin_tolerance.md  explicacao_ultimo_commit.md  pin_assignments.md  roteiro_configuracao.md  spi_poll_pipeline.md
manuals/: tmc5160t_plus_manual.txt
meus_logs/: interactive_sim_20251110_082115.csv  interactive_sim_20251110_121708.csv  interactive_sim_20251110_122304.csv  interactive_sim_20251110_122922.csv  interactive_sim_20251110_123544.csv  interactive_sim_20251110_124212.csv  interactive_sim_20251110_124851.csv  interactive_sim_20251110_125034.csv  interactive_sim_20251110_130820.csv  interactive_sim_20251110_134659.csv  interactive_sim_20251110_153610.csv  interactive_sim_20251110_153715.csv
meus_logs_old/: interactive_sim_20251111_164111.csv
notebooks/: old_model_dda_pid_casc.ipynb  swv_pipeline_explained.ipynb  swv_pipeline_explained_plus.ipynb  swv_pipeline_unificado_progress.ipynb
raspberry_spi/: README.md  README_SERVICES.md  TMC5160_ERRORS.md  __init__.py  application.cfg  cnc_cli.py  cnc_client.py  cnc_commands.py  cnc_protocol.py  cnc_requests.py  cnc_responses.py  cnc_spi_client.py  sequence_cli.py  test_cnc_client.py  test_cnc_client_exchange.py  test_cnc_commands.py  test_cnc_spi_client_args.py  test_handshake_validation.py  test_hello_frames.py  test_led_frames.py  test_stm32_spi_integration.py  test_tmc5160.py  test_tmc_status_cli.py  tmc5160.py  tmc5160_cli.py  tmc5160_old_cli.py  tmc5160_status_clear.py  tmc5160_stepdir.py  tmc5169.py
sim_logs/: interactive_sim_20251110_140848.csv  interactive_sim_20251110_143053.csv  interactive_sim_20251114_094341.csv
tcc/: tcc_outline.md
tools/: export_old_new_screenshot.py  generate_fopdt_overlays.py
(+516 files in other folders)
